Closed Bug 1157661 Opened 9 years ago Closed 9 years ago

Wrong null-check in CompositorOGL::DrawQuad

Categories

(Core :: Graphics: Layers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla40
Tracking Status
firefox40 --- fixed

People

(Reporter: nical, Assigned: u538282, Mentored)

References

(Blocks 1 open bug)

Details

(Keywords: coverity, Whiteboard: [gfx-noted])

Attachments

(1 file)

Keywords: coverity
Hi,
I would like to work on this bug (this will be my first contribution to Firefox) !
Attachment #8601529 - Flags: review?(nical.bugzilla)
Comment on attachment 8601529 [details] [diff] [review]
Proposed patch for #11577661

Review of attachment 8601529 [details] [diff] [review]:
-----------------------------------------------------------------

Congrats for your first contribution Thibaud!
Attachment #8601529 - Flags: review?(nical.bugzilla) → review+
I landed your patch in mozilla-inbound (I modified the commit message, hope you don't mind), the patch should make it into nightly shortly.
Assignee: nobody → thibaud.backenstrass
https://hg.mozilla.org/mozilla-central/rev/d5927ec6b3bd
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
You need to log in before you can comment on or make changes to this bug.