Bug 1157661 - Fix a null-check in CompositorOGL::DrawQuad. r=nical